--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,8 +8,12 @@ environment:
   sdk: ^3.0.0
 
 dependencies:
+  cached_network_image: ^3.4.1
   flutter:
     sdk: flutter
+  http: ^1.6.0
+  intl: ^0.20.2
+  provider: ^6.1.5+1
 
 dev_dependencies:
   flutter_test:
